<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lz.lztrain.activity.MainActivity">

    <include
        android:id="@+id/title_layout"
        layout="@layout/public_toolbar" />

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_below="@+id/title_layout"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:digits="0123456789"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/selector_username_icon"
            android:gravity="center|start"
            android:hint="@string/username_hint"
            android:inputType="number"
            android:maxLength="11"
            android:nextFocusForward="@+id/password" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/darker_gray" />

        <com.lz.lztrain.view.PasswordEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_weight="0.92"
            android:background="@null"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/selector_password_icon"
            android:ellipsize="start"
            android:gravity="center|start"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            app:pet_disableIconAlpha="true" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        style="@style/submitButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/ll_login"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="14dp"
        android:text="@string/login" />

</RelativeLayout>